// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Table Customer {
    id INTEGER [primary key]
    name TEXT 
    balance FLOAT 
    credit_limit FLOAT 
    }

Table Item {
    id INTEGER [primary key]
    order_id INTEGER 
    product_id INTEGER 
    quantity INTEGER 
    unit_price FLOAT 
    amount FLOAT 
    }

Table Order {
    id INTEGER [primary key]
    customer_id INTEGER 
    sales_rep_id INTEGER 
    year_month TEXT 
    notes TEXT 
    order_date TEXT 
    amount_total FLOAT 
    date_shipped TEXT 
    }

Table Product {
    id INTEGER [primary key]
    name TEXT 
    unit_price FLOAT 
    }

Table SalesRepTotal {
    sales_rep_id INTEGER [primary key]
    year_month TEXT 
    total_amount FLOAT 
    order_count INTEGER 
    }

Table SalesRep {
    id INTEGER [primary key]
    name TEXT 
    }

Table SysConfig {
    id INTEGER [primary key]
    name TEXT 
    discount_rate FLOAT 
    tax_rate FLOAT 
    notes TEXT 
    }



// Relationships
    Ref: Item.(order_id) > Order.(id)
    Ref: Item.(product_id) > Product.(id)
    Ref: Order.(customer_id) > Customer.(id)
    Ref: Order.(sales_rep_id, year_month) > SalesRepTotal.(sales_rep_id, sales_rep_id)
    Ref: SalesRepTotal.(sales_rep_id) > SalesRep.(id)
